--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "reactjs-social-login": "^2.6.3",
     "styled-components": "^6.1.0",
     "tailwind-merge": "^2.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
