--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.0",
+    "echarts": "^5.5.1",
     "faker": "^6.6.5",
     "framer-motion": "^11.1.7",
     "jwt-decode": "^3.1.2",
