--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-share": "^5.1.2",
     "react-slick": "^0.29.0",
     "reactjs-social-login": "^2.6.3",
     "styled-components": "^6.1.0",
